--- a/Frontend/src/assets/profile/scss/pages/common.scss
+++ b/Frontend/src/assets/profile/scss/pages/common.scss
@@ -620,6 +620,7 @@ ul#themecolors {
 
 .green-dark-theme {
     background: $dark;
+    ;
     /* Old browsers */
     background: -moz-linear-gradient(left, $dark 0%, $dark 23%, $success 23%, $success 99%);
     /* FF3.6-15 */
@@ -630,6 +631,7 @@ ul#themecolors {
 
 .yellow-dark-theme {
     background: $dark;
+    ;
     /* Old browsers */
     background: -moz-linear-gradient(left, $dark 0%, $dark 23%, $danger 23%, $danger 99%);
     /* FF3.6-15 */
@@ -640,6 +642,7 @@ ul#themecolors {
 
 .blue-dark-theme {
     background: $dark;
+    ;
     /* Old browsers */
     background: -moz-linear-gradient(left, $dark 0%, $dark 23%, $info 23%, $info 99%);
     /* FF3.6-15 */
