--- a/Frontend/src/assets/scss/bootstrap/_print.scss
+++ b/Frontend/src/assets/scss/bootstrap/_print.scss
@@ -16,6 +16,7 @@
       // Bootstrap specific; comment out `color` and `background`
       //color: $black !important; // Black prints faster
       text-shadow: none !important;
+      //background: transparent !important;
       box-shadow: none !important;
     }
 
@@ -25,9 +26,25 @@
       }
     }
 
+    // Bootstrap specific; comment the following selector out
+    //a[href]::after {
+    //  content: " (" attr(href) ")";
+    //}
+
     abbr[title]::after {
       content: " (" attr(title) ")";
     }
+
+    // Bootstrap specific; comment the following selector out
+    //
+    // Don't show links that are fragment identifiers,
+    // or use the `javascript:` pseudo protocol
+    //
+
+    //a[href^="#"]::after,
+    //a[href^="javascript:"]::after {
+    // content: "";
+    //}
 
     pre {
       white-space: pre-wrap !important;
