--- a/Frontend/src/assets/css/bootstrap.css
+++ b/Frontend/src/assets/css/bootstrap.css
@@ -5,11 +5,6 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-html {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
 
 body {
   margin: 0;
@@ -126,7 +121,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  font-family: monospace;
   font-size: 1em;
 }
 
@@ -1387,18 +1382,6 @@ th {
   box-sizing: border-box;
 }
 
-html {
-  font-size: 10px;
-  -webkit-tap-highlight-color: transparent;
-}
-
-body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857;
-  color: #333333;
-  background-color: #fff;
-}
 
 input,
 button,
@@ -1409,27 +1392,7 @@ textarea {
   line-height: inherit;
 }
 
-a {
-  color: #337ab7;
-  text-decoration: none;
-}
-a:hover, a:focus {
-  color: #23527c;
-  text-decoration: underline;
-}
-a:focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
 
-figure {
-  margin: 0;
-}
-
-img {
-  vertical-align: middle;
-}
 
 .img-responsive {
   display: block;
@@ -1459,12 +1422,7 @@ img {
   border-radius: 50%;
 }
 
-hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: 0;
-  border-top: 1px solid #eeeeee;
-}
+
 
 .sr-only {
   position: absolute;
@@ -7067,9 +7025,7 @@ button.close {
   position: fixed;
 }
 
-@-ms-viewport {
-  width: device-width;
-}
+
 .visible-xs {
   display: none !important;
 }
